kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-11-29 - 16:44:29 +0000
  labels:
    app.kubernetes.io/name: quarkus-first-sample
    app.kubernetes.io/version: latest
  name: quarkus-first-sample
  namespace: quarkus-testing
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-first-sample
    app.kubernetes.io/version: latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-11-29 - 16:44:29 +0000
  labels:
    app.kubernetes.io/version: latest
    app.kubernetes.io/name: quarkus-first-sample
  name: quarkus-first-sample
  namespace: quarkus-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: latest
      app.kubernetes.io/name: quarkus-first-sample
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2021-11-29 - 16:44:29 +0000
      labels:
        app.kubernetes.io/version: latest
        app.kubernetes.io/name: quarkus-first-sample
      namespace: quarkus-testing
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ghcr.io/hhutzler/quarkus-first-sample:latest
          imagePullPolicy: Always
          name: quarkus-first-sample
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccount: quarkus-first-sample
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-11-29 - 16:44:29 +0000
  labels:
    app.kubernetes.io/name: quarkus-first-sample
    app.kubernetes.io/version: latest
  name: quarkus-first-sample
  namespace: quarkus-testing
spec:
  rules:
    - host: app1.quarkus.com
      http:
        paths:
          - backend:
              service:
                name: quarkus-first-sample
                port:
                  name: http
            path: /
            pathType: Prefix
